# mephland

./: .gitignore  CMakeLists.txt
cmake/: FindLibdrm.cmake
headers/: MState.h  common.h  controller.h  drm_backend.h  env.h  globals.h  sdl_backend.h  vdevice.h  vdisplay.h  vinstance.h  vshaders.h  vulk.h  wayalnd_server.h
headers/templates/: common_details.tcc  common_impl.tcc
impl/: controller.cpp  display_renderer.cpp  drm.cpp  globals.cpp  main.cpp  sdl.cpp  shaders.cpp  vdevice.cpp  vdisplay.cpp  vdisplay_creation.cpp  vdisplay_impl.cpp  vdisplay_impl.h  vinstance.cpp  wayland_server.cpp
impl/interfaces/: compositor.cpp  output.cpp  wl_interface.cpp
impl/render_stuff/: drm.cpp  sdl.cpp  shaders.cpp  vdevice.cpp  vdisplay.cpp  vdisplay_creation.cpp  vdisplay_impl.cpp  vinstance.cpp  vulk.cpp
include/mland/: common.h  controller.h  drm_backend.h  env.h  interfaces.h  sdl_backend.h  vdevice.h  vdisplay.h  vinstance.h  vshaders.h  vsurface.h  vtexture.h  wayland_server.h
include/mland/interfaces/: compositor.h  output.h  wl_interface.h
include/mland/templates/: common_details.tcc
shaders/: vertex.vert
